# SensorTileCmake

./: CMakeLists.txt  README.md  debug  gdbinit  generate_build.sh
STSW-STLKT01_V1.3.1/: Release_Notes.html
STSW-STLKT01_V1.3.1/Drivers/BSP/Components/pcm1774/: PCM1774_CODEC_Driver.c
STSW-STLKT01_V1.3.1/Drivers/BSP/SensorTile/: Release_Notes.html
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/: Release_Notes.html  readme.txt
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/EWARM/: Project.ewp
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/Inc/: cube_hal.h  main.h  stm32l4xx_hal_conf.h  usbd_conf.h
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/MDK-ARM/: startup_stm32l476xx.s
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/SW4STM32/STM32L4xx-SensorTile/: .cproject  .project  LinkerScript.ld
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/AudioLoop/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c  usbd_audio_if.c  usbd_conf_l4.c
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/BLE_SampleApp/EWARM/: Project.ewp
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/BLE_SampleApp/Inc/: sensor_service.h
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/BLE_SampleApp/MDK-ARM/: Project.uvoptx  Project.uvprojx
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/BLE_SampleApp/SW4STM32/STM32L4xx-SensorTile/: .cproject
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/BLE_SampleApp/Src/: sensor_service.c  system_stm32l4xx.c
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/DataLog/: Release_Notes.html
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/DataLog/Inc/: FreeRTOSConfig.h  datalog_application.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/DataLog/SW4STM32/STM32L47xx_SensorTile/: .cproject  .project
STSW-STLKT01_V1.3.1/Projects/SensorTile/Applications/DataLog/Src/: datalog_application.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_cdc_interface.c
application/: CMakeLists.txt
drivers/: CMakeLists.txt
middleware/: CMakeLists.txt
toolchain/: arm_embedded_toolchain.txt
